--- a/Projeto/src/Components/ConcursoList/ConcursoList.module.css
+++ b/Projeto/src/Components/ConcursoList/ConcursoList.module.css
@@ -93,16 +93,11 @@
 }
 
 .concursoName {
-  color: var(--text-color-light);
   font-size: 1.4rem;
   margin: 0;
   font-weight: 600;
   line-height: 1.4;
   transition: color 0.2s ease;
-}
-
-.concursoCard:hover .concursoName {
-  color: var(--hover-color-light);
 }
 
 .loading {
@@ -138,10 +133,15 @@
   justify-content: center;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.9);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.418);
 }
 
 .heartIcon {
+  font-size: 1.5rem;
+  color: #c5a572;
+  transition: all 0.3s ease;
+}
+.heartIconVazio{
   font-size: 1.5rem;
   color: #c5a572;
   transition: all 0.3s ease;
@@ -153,7 +153,7 @@
 
 .favoritoBtn:hover {
   background-color: rgba(255, 255, 255, 1);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.678);
 }
 
 .favoritoBtn:active {
@@ -163,6 +163,36 @@
 .favorito .heartIcon {
   color: #c5a572;
   animation: heartBeat 0.3s ease-in-out;
+}
+
+.favoritoBtn:after {
+    content: "Adicionar aos favoritos";
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    bottom: 30px;
+    top: -15%;
+    left: -180%;
+    padding: 12px 7px;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border-radius: 4px;
+    font-size: 12px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    pointer-events: none;
+    white-space: nowrap;
+
+}
+.favoritoBtn.favorito:after{
+    content: "Remover dos favoritos";
+  
+}
+
+.favoritoBtn:hover::after {
+  opacity: 1;
 }
 
 @keyframes heartBeat {
@@ -245,6 +275,9 @@
 
 .buttonUf {
   padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: var(--card-bg-light);
   border-radius: 12px;
   box-shadow: 0 4px 20px var(--card-shadow-light);
@@ -256,18 +289,44 @@
   height: 43px;
   cursor: pointer;
   color: var(--text-color-light);
+  overflow: visible;
+  z-index: 0;
 }
 
 .buttonUf::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 4px;
+  border-top-left-radius: 200px;
+  border-top-right-radius: 200px;
+  width: 95%;
+  height: 6px;
   background: var(--gold);
   opacity: 0;
   transition: opacity 0.3s ease;
+  z-index: 1;
+}
+.buttonUf:after {
+  content: 'Pesquisar por estado';
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 50px;
+  top: -55%;
+  left: -170%;
+  padding: 12px 7px;
+  transform: translateX(-50%);
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  border-radius: 4px;
+  font-size: 12px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+  white-space: nowrap;
+  z-index: 9999;
+
 }
 
 .buttonUf:hover {
@@ -275,13 +334,11 @@
   box-shadow: 0 8px 30px var(--card-shadow-light);
 }
 
-.buttonUf:hover::before {
+
+.buttonUf:hover::before, .buttonUf:hover::after{
   opacity: 1;
 }
 
-.buttonUf:hover {
-  color: var(--hover-color-light);
-}
 
 @media (prefers-color-scheme: dark) {
   .buttonUf {
