--- a/Projeto/src/Components/Header/header.module.css
+++ b/Projeto/src/Components/Header/header.module.css
@@ -29,7 +29,7 @@
 
 .container {
     background: linear-gradient(to right, var(--primary-dark), var(--primary));
-    padding: 1.2rem 2.5rem;
+    padding: 1.4rem 2rem;
     box-shadow: 0 4px 12px rgba(12, 35, 64, 0.15);
     display: flex;
     justify-content: space-between;
@@ -113,7 +113,7 @@
 
 .loginButton {
     background-color: transparent;
-    color: var(--white);
+    color: var(--gold);
     border: 2px solid var(--gold);
     padding: 0.6rem 1.5rem;
     border-radius: 8px;
@@ -178,7 +178,7 @@
 
 .themeToggle {
     background: none;
-    border: none;  /* Removida a borda */
+    border: none; 
     cursor: pointer;
     padding: 0.8rem 1.2rem;
     border-radius: 4px;
@@ -195,69 +195,85 @@
   transform: translateY(-1px);
 }
 
-.userInfo {
+
+.containerMenu{
     display: flex;
     align-items: center;
-    gap: 0.8rem;
-    padding: 0.8rem 1.5rem;
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    justify-content: center;
+    gap: 15px;
+}
+
+.containerButtonClaroEscuro{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+}
+.buttonLogout{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    background-color: transparent;
+    color: var(--gold);
+    border: 2px solid var(--gold);
+    padding: 0.7rem 1rem;
     border-radius: 8px;
+    font-weight: 600;
     cursor: pointer;
     transition: all 0.3s ease;
-    backdrop-filter: blur(5px);
-    min-width: 150px;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
     position: relative;
 }
-
-.userInfo:hover {
-    background: rgba(255, 255, 255, 0.15);
+.buttonLogout:hover  {
+    background-color: var(--gold);
+    color: var(--primary-dark);
     transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 12px rgba(197, 165, 114, 0.3);
 }
 
-.userInfo:after {
+.buttonLogout:after {
     content: "Clique para sair";
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 6rem;
+    height: 1.3rem;
     position: absolute;
-    bottom: -30px;
-    left: 50%;
+    bottom: -40px;
+    top: 110%;
+    left: 80%;
     transform: translateX(-50%);
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.5);
     color: white;
-    padding: 5px 10px;
     border-radius: 4px;
-    font-size: 12px;
+    font-size: 8px;
     opacity: 0;
     transition: opacity 0.3s ease;
     pointer-events: none;
+    
 }
-
-.userInfo:hover:after {
+.buttonLogout:hover::after{
     opacity: 1;
 }
 
-.userIcon {
-    color: var(--gold);
-    font-size: 1.2rem;
-    transition: transform 0.3s ease;
-    min-width: 24px;
+.menuUsuario li {
+    cursor: pointer;
+    transition: all 0.3s ease;
+    letter-spacing: 0.5px;
+    position: relative;
+    
 }
 
-.userInfo:hover .userIcon {
-    transform: scale(1.1);
+.menuUsuario li:hover {
+    transform: translateY(-2px);
+}
+.menuUsuario li:active{
+    transform: translateY(0);       
 }
 
-.username {
-    color: var(--white);
-    font-weight: 600;
-    font-size: 0.95rem;
-    letter-spacing: 0.3px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 150px;
-    text-transform: capitalize;
-}
 
 
 /* Botão do Menu Hambúrguer (só visível em telas pequenas) */
@@ -311,38 +327,25 @@
     white-space: nowrap;
 }
 
-/* Estilos para o botão de fechar */
-/* .sideMenu button {
-    background-color: var(--primary-light);
-    color: var(--neutral-dark);
-    padding: 0.5rem;
-    border: none;
-    cursor: pointer;
-    font-size: 1.2rem;
-    margin-top: 2rem;
-} */
-
-/* Menu de navegação padrão (para telas grandes) */
 .navDesktop ul {
     display: flex;
-    gap: 2rem; /* Espaçamento entre os itens */
+    gap: 2rem; 
     margin: 0;
     padding: 0;
-    align-items: center; /* Garante que os itens fiquem centralizados verticalmente */
+    align-items: center; 
 }
 
-/* Estilo dos itens dentro da navegação */
 .navDesktop ul li {
     list-style: none;
 }
 
-/* Estilo para links dentro da navegação */
+
 .navDesktop ul li a {
     text-decoration: none;
     color: var(--neutral-light);
     font-size: 1.2rem;
-    font-weight: 600;
-    white-space: nowrap; /* Impede o texto de quebrar em várias linhas */
+    font-weight: 550;
+    white-space: nowrap; 
 }
 
 .sobreNoisButton {
@@ -389,7 +392,7 @@
     text-transform: uppercase;
     letter-spacing: 0.5px;
     position: relative;
-    overflow: hidden;
+    
 }
 /* Responsividade: Ajustes para telas pequenas */
 @media (max-width: 885px) {
