--- a/Projeto/src/pages/favorites/favorites.css
+++ b/Projeto/src/pages/favorites/favorites.css
@@ -2,27 +2,39 @@
     padding: 2rem;
     max-width: 1200px;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
   }
   
   .favoritos-container h1 {
     margin-bottom: 2rem;
     text-align: center;
-    color: var(--title-color-light);
+    color: var(--title-color-dark);
     font-size: 2.5rem;
+  }
+  .favoritos-container p {
+    color: var(--title-color-dark);
+    font-size: 1.5rem;
   }
   
   .favoritos-grid {
     display: grid;
+    width: 100%;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1.5rem;
+
   }
   
   .favorito-card {
-    background-color: var(--card-bg-light);
+    background: var(--card-bg-dark);
     border-radius: 12px;
     padding: 1.5rem;
     box-shadow: 0 4px 20px var(--card-shadow-light);
     transition: transform 0.3s ease;
+    border: 1px solid var(--card-border-light);
   }
   
   .favorito-card:hover {
@@ -33,6 +45,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    
   }
   
   .favorito-link {
@@ -41,7 +54,7 @@
   }
   
   .favorito-link h3 {
-    color: var(--text-color-light);
+    color: var(--text-color-dark);
     font-size: 1.2rem;
     margin: 0 0 1rem 0;
   }
@@ -52,9 +65,9 @@
   }
   
   .remover-favorito {
-    background-color: #fff;
-    color: #ff4444;
-    border: 2px solid #ff4444;
+    background-color: #e44646;
+    color: white;
+    border: none;
     border-radius: 8px;
     padding: 0.8rem 1.2rem;
     cursor: pointer;
@@ -69,6 +82,7 @@
     font-size: 0.9rem;
     text-transform: uppercase;
     letter-spacing: 0.5px;
+    box-shadow: 0 2px 6px rgba(34, 33, 33, 0.473);
   }
   
   .delete-icon {
@@ -76,9 +90,9 @@
   }
   
   .remover-favorito:hover {
-    background-color: #ff4444;
+    background-color: #ca2e2e;
     color: white;
-    box-shadow: 0 4px 12px rgba(255, 68, 68, 0.2);
+    box-shadow: 0 2px 6px rgba(34, 33, 33, 0.616);
     transform: translateY(-2px);
   }
   
