--- a/Projeto/src/Components/BlocoDeNotas/BlocoDeNotas.css
+++ b/Projeto/src/Components/BlocoDeNotas/BlocoDeNotas.css
@@ -35,8 +35,25 @@
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     margin-top: 0;
 }
+.containerButtonCreate form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 
-
+.bloco-de-notas input{
+    width: 60%;
+    padding: 8px;
+    padding-left: 15px;
+    font-size: 18px;
+    border: 2px solid var(--gold);
+    border-radius: 10px;
+    background-color: var(--white);
+    color: var(--primary-dark);
+    font-family: 'Arial', sans-serif;
+    transition: border-color 0.3s ease;
+    resize: none;
+}
 .bloco-de-notas textarea {
     width: 100%;
     height: 120px;
@@ -58,6 +75,7 @@
 
 
 .bloco-de-notas .bloco-de-notas-button {
+    text-transform: uppercase;
     padding: 15px 40px;
     font-size: 20px;
     font-weight: bold;
@@ -65,8 +83,8 @@
     border: 2px solid var(--gold-dark);
     border-radius: 30px; 
     background: linear-gradient(145deg, var(--gold), var(--gold-light));
-    color: var(--neutral-dark); 
-    transition: background 0.4s ease, transform 0.2s ease;
+    color: var(--white);
+    transition: 0.4s ease, transform 0.2s ease;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.15); 
     margin-top: 25px;
     width: 100%;
@@ -101,19 +119,7 @@
     gap: 15px; 
 }
 
-.bloco-de-notas .nota-card:hover {
-    transform: scale(1.03);
-    background-color: var(--primary-light); 
-}
 
-
-.bloco-de-notas .nota-card span {
-    color: var(--primary-dark); 
-    font-size: 18px;
-    margin-bottom: 10px;
-    word-wrap: break-word;
-    max-width: 90%;
-}
 
 .bloco-de-notas .nota-card div {
     display: flex;
@@ -129,21 +135,56 @@
 
 .bloco-de-notas .nota-card button.excluir {
     background-color: var(--red); 
+    text-transform: uppercase;
     color: var(--white);
+    border: none;
+    box-shadow: 0 2px 6px rgba(34, 33, 33, 0.473);
+    transition: 0.4s ease, transform 0.2s ease;
 }
 
 .bloco-de-notas .nota-card button.excluir:hover {
     background-color: darkred;
+    cursor: pointer;
+    box-shadow: 0 2px 6px rgba(34, 33, 33, 0.616);
+    transform: translateY(-3px);
 }
 
 .bloco-de-notas .nota-card button.editar {
-    background-color: var(--primary); 
+    text-transform: uppercase;
+    background-color: var(--primary-light);
+    box-shadow: 0 2px 6px rgba(34, 33, 33, 0.473);
     color: var(--white);
+    border: none;
+    transition: 0.4s ease, transform 0.2s ease;
 }
 
 .bloco-de-notas .nota-card button.editar:hover {
-    background-color: var(--primary-light); /
+    background-color: var(--primary); 
+    box-shadow: 0 2px 6px rgba(34, 33, 33, 0.616);
+    cursor: pointer;
+    transform: translateY(-3px);
 }
+.informacao{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    padding: 10px;
+    
+}
+.descricao{
+    display: flex;
+    align-items: flex-start;
+    text-align: start;    
+    overflow:hidden;
+    margin-top: 10px;
+    padding: 10px;
+    border: 2px solid var(--gold-dark);
+    width: 100%;
+    height: 10dvh;
+     
+}
+
 .NotasSalvas {
     margin-top: 2rem;
     color: white;
