--- a/Projeto/src/Components/BlocoDeNotas/BlocoDeNotas.css
+++ b/Projeto/src/Components/BlocoDeNotas/BlocoDeNotas.css
@@ -72,28 +72,49 @@
     border-color: var(--primary-light); 
     outline: none;
 }
+.containerBlocoDeNotasButton{
+    display: flex;
+    gap: 15px;
+}
 
-
-.bloco-de-notas .bloco-de-notas-button {
+.bloco-de-notas-button {
     text-transform: uppercase;
     padding: 15px 40px;
     font-size: 20px;
     font-weight: bold;
     cursor: pointer;
-    border: 2px solid var(--gold-dark);
+    border: none;
     border-radius: 30px; 
     background: linear-gradient(145deg, var(--gold), var(--gold-light));
     color: var(--white);
     transition: 0.4s ease, transform 0.2s ease;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.15); 
-    margin-top: 25px;
     width: 100%;
     max-width: 300px; 
 }
+.bloco-de-notas-button-cancelar {
+    text-transform: uppercase;
+    padding: 15px 40px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    border-radius: 30px;
+    background-color: var(--red);
+    color: var(--white);
+    transition: 0.4s ease, transform 0.2s ease;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.15);
+    width: 100%;
+    max-width: 300px;
+}
 
-.bloco-de-notas .bloco-de-notas-button:hover {
+.bloco-de-notas-button:hover {
     background: linear-gradient(145deg, var(--gold-dark), var(--gold)); 
     transform: translateY(-3px); 
+}
+.bloco-de-notas-button-cancelar:hover {
+    background-color: rgb(216, 54, 54);
+    transform: translateY(-3px);
 }
 
 .bloco-de-notas .bloco-de-notas-button:active {
@@ -118,9 +139,6 @@
     text-align: center;
     gap: 15px; 
 }
-
-
-
 .bloco-de-notas .nota-card div {
     display: flex;
     gap: 10px;
@@ -143,7 +161,7 @@
 }
 
 .bloco-de-notas .nota-card button.excluir:hover {
-    background-color: darkred;
+    background-color: rgb(216, 54, 54);
     cursor: pointer;
     box-shadow: 0 2px 6px rgba(34, 33, 33, 0.616);
     transform: translateY(-3px);
