--- a/Projeto/src/Components/Header/header.module.css
+++ b/Projeto/src/Components/Header/header.module.css
@@ -110,6 +110,10 @@
     background-color: var(--white);
     box-shadow: 0 0 0 3px rgba(197, 165, 114, 0.15);
 }
+.containerButtonLoginTheme{
+    display: flex;
+    gap: 15px;
+}
 
 .loginButton {
     background-color: transparent;
