--- a/Projeto/src/Components/SignUp/SignUp.module.css
+++ b/Projeto/src/Components/SignUp/SignUp.module.css
@@ -42,7 +42,26 @@
   opacity: 1;
   transform: rotate(90deg);
 }
-
+.message{
+  color: #4acf2f;
+  background-color: #ddf1d2;
+  border: 1px solid #cbf3bcf3;
+  border-radius: 4px;
+  padding: 10px;
+  margin-bottom: 1rem;
+  font-size: 0.9rem;
+  text-align: center;
+}
+.errorMessage {
+  color: #dc3545;
+  background-color: #f8d7da;
+  border: 1px solid #f5c6cb;
+  border-radius: 4px;
+  padding: 10px;
+  margin-bottom: 1rem;
+  font-size: 0.9rem;
+  text-align: center;
+}
 .title {
   font-size: 2.2rem;
   font-weight: 700;
