--- a/Projeto/src/Components/BlocoDeNotas/BlocoDeNotas.css
+++ b/Projeto/src/Components/BlocoDeNotas/BlocoDeNotas.css
@@ -14,18 +14,23 @@
     --white: #ffffff;          
     --red: #ff4f4f;           
 }
-
+.container{
+    background: var(--background-gradient-light);
+    width: 100%;
+    min-height: calc(100dvh - 6rem);
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    padding: 5dvh;
+}
 
 .bloco-de-notas {
     padding: 40px;
-    max-width: 650px;
-    margin: auto;
+    width: 100%;
     background-color: var(--primary-dark);
     border-radius: 20px;
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
     font-family: 'Courier New', Courier, monospace;
-    color: var(--white);
-    margin-top: 40px;
 }
 
 .bloco-de-notas h1 {
@@ -46,30 +51,31 @@
     padding: 8px;
     padding-left: 15px;
     font-size: 18px;
-    border: 2px solid var(--gold);
     border-radius: 10px;
-    background-color: var(--white);
-    color: var(--primary-dark);
+    background: var(--card-bg-light);
+    color: var(--text-color-light);
     font-family: 'Arial', sans-serif;
     transition: border-color 0.3s ease;
     resize: none;
+    border: 1px solid var(--card-border-light);
 }
 .bloco-de-notas textarea {
     width: 100%;
     height: 120px;
     padding: 15px;
     font-size: 18px;
-    border: 2px solid var(--gold); 
     border-radius: 10px;
-    background-color: var(--white); 
-    color: var(--primary-dark); 
+    background: var(--card-bg-light);
+    color: var(--text-color-light);
     font-family: 'Arial', sans-serif;
     transition: border-color 0.3s ease;
     resize: none; 
+    border: 1px solid var(--card-border-light); 
 }
 
-.bloco-de-notas textarea:focus {
+.bloco-de-notas textarea:focus, input:focus {
     border-color: var(--primary-light); 
+    color: var(--text-color-light);
     outline: none;
 }
 .containerBlocoDeNotasButton{
@@ -124,8 +130,8 @@
 }
 
 
-.bloco-de-notas .nota-card {
-    background-color: var(--white); 
+.nota-card {
+    background: var(--card-bg-light);
     padding: 20px;
     margin: 20px 0;
     border-radius: 15px;
@@ -139,19 +145,18 @@
     text-align: center;
     gap: 15px; 
 }
-.bloco-de-notas .nota-card div {
+
+.containerButton{
     display: flex;
     gap: 10px;
-    justify-content: center;
 }
-
-.bloco-de-notas .nota-card button {
+button {
     padding: 8px 15px;
     font-size: 16px;
     border-radius: 8px;
 }
 
-.bloco-de-notas .nota-card button.excluir {
+button.excluir {
     background-color: var(--red); 
     text-transform: uppercase;
     color: var(--white);
@@ -159,15 +164,14 @@
     box-shadow: 0 2px 6px rgba(34, 33, 33, 0.473);
     transition: 0.4s ease, transform 0.2s ease;
 }
-
-.bloco-de-notas .nota-card button.excluir:hover {
+button.excluir:hover {
     background-color: rgb(216, 54, 54);
     cursor: pointer;
     box-shadow: 0 2px 6px rgba(34, 33, 33, 0.616);
     transform: translateY(-3px);
 }
 
-.bloco-de-notas .nota-card button.editar {
+button.editar {
     text-transform: uppercase;
     background-color: var(--primary-light);
     box-shadow: 0 2px 6px rgba(34, 33, 33, 0.473);
@@ -176,7 +180,7 @@
     transition: 0.4s ease, transform 0.2s ease;
 }
 
-.bloco-de-notas .nota-card button.editar:hover {
+button.editar:hover {
     background-color: var(--primary); 
     box-shadow: 0 2px 6px rgba(34, 33, 33, 0.616);
     cursor: pointer;
@@ -200,6 +204,7 @@
     border: 2px solid var(--gold-dark);
     width: 100%;
     height: 10dvh;
+    gap: 10px;
      
 }
 
