--- a/Projeto/src/pages/favorites/favorites.css
+++ b/Projeto/src/pages/favorites/favorites.css
@@ -1,18 +1,20 @@
 .favoritos-container {
   padding: 2rem;
-  max-width: 1200px;
-  margin: 0 auto;
+  width: 100%;
+  min-height: calc(100dvh - 6rem);
+  margin: 0;
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
-    
+  justify-content: start;
+  flex-direction: column; 
+  background: var(--background-gradient-light);
+  overflow-y: auto;   
   }
   
 .favoritos-container h1 {
   margin-bottom: 2rem;
   text-align: center;
-  color: var(--title-color-dark);
+  color: var(--text-color-light);
   font-size: 2.5rem;
 }
 .favoritos-grid {
@@ -24,12 +26,13 @@
 }
 
 .favorito-card {
-  background: var(--card-bg-dark);
+  background: var(--card-bg-light);
   border-radius: 12px;
   padding: 1.5rem;
   box-shadow: 0 4px 20px var(--card-shadow-light);
   transition: transform 0.3s ease;
   border: 1px solid var(--card-border-light);
+  color: var(--text-color-light);
 }
 
 .favorito-card:hover {
@@ -48,9 +51,9 @@
   color: inherit;
 }
 
-.favorito-link h3 {
-  color: var(--text-color-dark);
-  font-size: 1.2rem;
+.favorito-link{  
+  font-size: 1.1rem;
+  font-weight: 600;
   margin: 0 0 1rem 0;
 }
 
