--- a/Projeto/src/pages/Notepad/notepad.module.css
+++ b/Projeto/src/pages/Notepad/notepad.module.css
@@ -24,7 +24,7 @@
     padding: 5dvh;
 }
 
-.bloco-de-notas {
+.notepad {
     padding: 40px;
     width: 100%;
     background-color: var(--primary-dark);
@@ -32,8 +32,7 @@
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
     font-family: 'Courier New', Courier, monospace;
 }
-
-.bloco-de-notas h1 {
+h1 {
     color: var(--gold); 
     font-size: 3rem;
     margin-bottom: 30px;
@@ -46,7 +45,7 @@
     gap: 20px;
 }
 
-.bloco-de-notas input{
+input{
     width: 60%;
     padding: 8px;
     padding-left: 15px;
@@ -59,7 +58,7 @@
     resize: none;
     border: 1px solid var(--card-border-light);
 }
-.bloco-de-notas textarea {
+textarea {
     width: 100%;
     height: 120px;
     padding: 15px;
@@ -73,7 +72,7 @@
     border: 1px solid var(--card-border-light); 
 }
 
-.bloco-de-notas textarea:focus, input:focus {
+textarea:focus, input:focus {
     border-color: var(--primary-light); 
     color: var(--text-color-light);
     outline: none;
@@ -83,7 +82,7 @@
     gap: 15px;
 }
 
-.bloco-de-notas-button {
+.notepadButton {
     text-transform: uppercase;
     padding: 15px 40px;
     font-size: 20px;
@@ -98,7 +97,7 @@
     width: 100%;
     max-width: 300px; 
 }
-.bloco-de-notas-button-cancelar {
+.notepadButtonCancel {
     text-transform: uppercase;
     padding: 15px 40px;
     font-size: 20px;
@@ -114,23 +113,23 @@
     max-width: 300px;
 }
 
-.bloco-de-notas-button:hover {
+.notepadButton:hover {
     background: linear-gradient(145deg, var(--gold-dark), var(--gold)); 
     transform: translateY(-3px); 
 }
-.bloco-de-notas-button-cancelar:hover {
+.notepadButtonCancel:hover {
     background-color: rgb(216, 54, 54);
     transform: translateY(-3px);
 }
 
-.bloco-de-notas .bloco-de-notas-button:active {
+.notepad .notepadButton:active {
     background: var(--gold-dark); 
     transform: scale(0.98); 
     box-shadow: none; 
 }
 
 
-.nota-card {
+.notepadCard {
     background: var(--card-bg-light);
     padding: 20px;
     margin: 20px 0;
@@ -144,6 +143,7 @@
     transition: transform 0.4s ease, background-color 0.3s ease;
     text-align: center;
     gap: 15px; 
+    color: var(--text-color-light);
 }
 
 .containerButton{
@@ -155,8 +155,7 @@ button {
     font-size: 16px;
     border-radius: 8px;
 }
-
-button.excluir {
+.excluir {
     background-color: var(--red); 
     text-transform: uppercase;
     color: var(--white);
@@ -164,14 +163,14 @@ button.excluir {
     box-shadow: 0 2px 6px rgba(34, 33, 33, 0.473);
     transition: 0.4s ease, transform 0.2s ease;
 }
-button.excluir:hover {
-    background-color: rgb(216, 54, 54);
+.excluir:hover {
+    background-color: rgb(206, 49, 49);
     cursor: pointer;
     box-shadow: 0 2px 6px rgba(34, 33, 33, 0.616);
     transform: translateY(-3px);
 }
 
-button.editar {
+.editar {
     text-transform: uppercase;
     background-color: var(--primary-light);
     box-shadow: 0 2px 6px rgba(34, 33, 33, 0.473);
@@ -180,13 +179,13 @@ button.editar {
     transition: 0.4s ease, transform 0.2s ease;
 }
 
-button.editar:hover {
+.editar:hover {
     background-color: var(--primary); 
     box-shadow: 0 2px 6px rgba(34, 33, 33, 0.616);
     cursor: pointer;
     transform: translateY(-3px);
 }
-.informacao{
+.information{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -194,7 +193,7 @@ button.editar:hover {
     padding: 10px;
     
 }
-.descricao{
+.description{
     display: flex;
     align-items: flex-start;
     text-align: start;    
@@ -208,7 +207,7 @@ button.editar:hover {
      
 }
 
-.NotasSalvas {
+.notepadSave {
     margin-top: 2rem;
     color: white;
 }
