--- a/Projeto/src/pages/Teacher/teacher.module.css
+++ b/Projeto/src/pages/Teacher/teacher.module.css
@@ -1,7 +1,6 @@
 
 .box {
     background: var(--background-gradient-light);
-    color: var(--text-color-light);
     display: flex;
     align-items: center;
     justify-content: start;
@@ -12,15 +11,20 @@
     min-height: calc(100dvh - 6rem);
   }
   
-.professoreslist {
+.boxHeader {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+.teacherList {
     display: flex;
     flex-direction: column;
     width: 100%;
     gap: 20px;
     color: var(--text-color-light);
 }
-
-.professor {
+.teacher {
     padding: 15px;
     border-radius: 8px;
     border: 1px solid var(--card-border-light);
@@ -28,13 +32,6 @@
     background: var(--card-bg-light);
     box-shadow: 0 4px 20px var(--card-shadow-light);
     
-}
-.boxHeader{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    color: var(--text-color-light);
 }
 
 .youtubelink {
@@ -53,7 +50,7 @@
 .youtube-link svg {
     margin-right: 8px;
 }
-p{
-
+h1, h4 {
+    margin: 0;
     color: var(--text-color-light);
 }
