--- a/Projeto/src/pages/favorites/favorites.module.css
+++ b/Projeto/src/pages/favorites/favorites.module.css
@@ -1,4 +1,4 @@
-.favoritos-container {
+.container {
   padding: 2rem;
   width: 100%;
   min-height: calc(100dvh - 6rem);
@@ -8,16 +8,17 @@
   justify-content: start;
   flex-direction: column; 
   background: var(--background-gradient-light);
-  overflow-y: auto;   
+  overflow-y: auto; 
+  color: var(--text-color-light);
   }
   
-.favoritos-container h1 {
+.container h1 {
   margin-bottom: 2rem;
   text-align: center;
   color: var(--text-color-light);
   font-size: 2.5rem;
 }
-.favoritos-grid {
+.favoritesGrid {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -25,7 +26,7 @@
 
 }
 
-.favorito-card {
+.card {
   background: var(--card-bg-light);
   border-radius: 12px;
   padding: 1.5rem;
@@ -35,34 +36,34 @@
   color: var(--text-color-light);
 }
 
-.favorito-card:hover {
+.card:hover {
   transform: translateY(-5px);
 }
 
-.favorito-content {
+.favoritesBody {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   
 }
 
-.favorito-link {
+.link {
   text-decoration: none;
   color: inherit;
 }
 
-.favorito-link{  
+.link{  
   font-size: 1.1rem;
   font-weight: 600;
   margin: 0 0 1rem 0;
 }
 
-.favorito-link p {
+.link p {
   margin: 0.5rem 0;
   color: #666;
 }
 
-.remover-favorito {
+.removeButton {
   background-color: var(--red);
   color: white;
   border: none;
@@ -83,38 +84,38 @@
   box-shadow: 0 2px 6px rgba(34, 33, 33, 0.473);
 }
 
-.delete-icon {
+.deleteIcon {
   font-size: 1.2rem;
 }
 
-.remover-favorito:hover {
+.removeButton:hover {
   background-color: darkred;
   color: white;
   box-shadow: 0 2px 6px rgba(34, 33, 33, 0.616);
   transform: translateY(-2px);
 }
 
-.remover-favorito:active {
+.removeButton:active {
   transform: translateY(0);
   box-shadow: 0 2px 6px rgba(255, 68, 68, 0.2);
 }
 
-.remover-favorito::before {
+.removeButton::before {
   content: '×';
   font-size: 1.2rem;
   font-weight: bold;
 }
 
 @media (max-width: 768px) {
-  .favoritos-container {
+  .container {
     padding: 1rem;
   }
   
-  .favoritos-container h1 {
+  .container h1 {
     font-size: 2rem;
   }
   
-  .favoritos-grid {
+  .favoritesGrid {
     grid-template-columns: 1fr;
   }
 }
