--- a/Projeto/src/Components/ConcursoList/ConcursoList.module.css
+++ b/Projeto/src/Components/ConcursoList/ConcursoList.module.css
@@ -3,10 +3,8 @@
   padding: 3rem 2rem;
   width: 100%;
   margin: 0 auto;
-  background: var(--background-gradient-light);
-  
+  background: var(--background-gradient-light);  
 }
-
 .title {
   color: var(--text-color-light);
   font-size: 3rem;
@@ -17,7 +15,6 @@
   letter-spacing: 2px;
   position: relative;
 }
-
 .title::after {
   content: '';
   position: absolute;
@@ -29,15 +26,13 @@
   background: var(--text-color-light);
   border-radius: 2px;
 }
-
-.concursoGrid {
+.contestGrid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   gap: 2rem;
   padding: 1rem;
 }
-
-.concursoCard {
+.contestCard {
   background: var(--card-bg-light);
   border-radius: 12px;
   box-shadow: 0 2px 20px var(--card-shadow-light);
@@ -47,8 +42,7 @@
   overflow: hidden;
   position: relative;
 }
-
-.concursoCard::before {
+.contestCard::before {
   content: '';
   position: absolute;
   top: 0;
@@ -59,31 +53,26 @@
   opacity: 0;
   transition: opacity 0.3s ease;
 }
-
-.concursoCard:hover {
+.contestCard:hover {
   transform: translateY(-8px);
   box-shadow: 0 8px 30px var(--card-shadow-light);
 }
-
-.concursoCard:hover::before {
+.contestCard:hover::before {
   opacity: 1;
 }
-
-.concursoLink {
+.contestLink {
   display: block;
   padding: 2rem;
   text-decoration: none;
   color: inherit;
 }
-
-.concursoName {
+.contestName {
   font-size: 1.4rem;
   margin: 0;
   font-weight: 600;
   line-height: 1.4;
   transition: color 0.2s ease;
 }
-
 .loading {
   text-align: center;
   padding: 3rem;
@@ -92,15 +81,13 @@
   font-weight: 500;
   animation: pulse 1.5s infinite;
 }
-
-.cardContent {
+.cardContainer {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   padding: 2rem;
   position: relative;
 }
-
 .favoritoBtn {
   border: none;
   cursor: pointer;
@@ -118,35 +105,29 @@
   background: var(--card-bg-light);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.418);
 }
-
 .heartIcon {
   font-size: 1.5rem;
   color: #c5a572;
   transition: all 0.3s ease;
 }
-.heartIconVazio{
+.heartIconEmpty{
   font-size: 1.5rem;
   color: #c5a572;
   transition: all 0.3s ease;
 }
-
 .favoritoBtn:hover .heartIcon {
   transform: scale(1.1);
 }
-
 .favoritoBtn:hover {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.678);
 }
-
 .favoritoBtn:active {
   transform: scale(0.95);
 }
-
-.favorito .heartIcon {
+.favorite .heartIcon {
   color: #c5a572;
   animation: heartBeat 0.3s ease-in-out;
 }
-
 .favoritoBtn:after {
   content: "Adicionar aos favoritos";
   position: absolute;
@@ -166,19 +147,13 @@
   transition: opacity 0.3s ease;
   pointer-events: none;
   white-space: nowrap;
-
 }
-.favoritoBtn.favorito:after{
-  content: "Remover dos favoritos";
-  
+.favoritoBtn.favorite:after{
+  content: "Remover dos favoritos";  
 }
-
 .favoritoBtn:hover::after {
   opacity: 1;
 }
-
-
-
 .buttonContainer {
   display: flex;
   align-items: center;
@@ -187,7 +162,6 @@
   flex-wrap: wrap;
   margin-bottom: 2rem;
 }
-
 .buttonUf {
   padding: 10px;
   display: flex;
@@ -208,8 +182,6 @@
   z-index: 0;
   font-weight: 600;
 }
-
-
 .buttonUf::before {
   content: "";
   position: absolute;
@@ -243,113 +215,11 @@
   pointer-events: none;
   white-space: nowrap;
   z-index: 9999;
-
 }
-
 .buttonUf:hover {
   transform: translateY(-8px);
   box-shadow: 0 8px 30px var(--card-shadow-light);
 }
-
 .buttonUf:hover::before, .buttonUf:hover::after{
   opacity: 1;
 }
-/*
-@media (prefers-color-scheme: light) {
-  .buttonUf {
-      background: var(--card-bg-light);
-      border-color: var(--card-border-light);
-      box-shadow: 0 4px 20px var(--card-shadow-light);
-      color: var(--text-color-light);
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-  .buttonUf {
-    background: var(--card-bg-dark);
-    border-color: var(--card-border-dark);
-    box-shadow: 0 4px 20px var(--card-shadow-dark);
-    color: var(--text-color-dark);
-  }
-
-  .buttonUf:hover {
-    color: var(--hover-color-dark);
-    box-shadow: 0 8px 30px var(--card-shadow-dark);
-  }
-} 
-@keyframes heartBeat {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.2);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .container {
-    background: var(--background-gradient-dark);
-  }
-
-  .title {
-    color: var(--title-color-dark);
-  }
-
-  .title::after {
-    background: var(--gradient-dark);
-  }
-
-  .concursoCard {
-    background: var(--card-bg-dark);
-    border-color: var(--card-border-dark);
-    box-shadow: 0 4px 20px var(--card-shadow-dark);
-  }
-
-  .concursoCard::before {
-    background: var(--gold);
-  }
-
-  .concursoCard:hover {
-    box-shadow: 0 8px 30px var(--card-shadow-dark);
-  }
-
-  .concursoName {
-    color: var(--text-color-dark);
-  }
-
-  .concursoCard:hover .concursoName {
-    color: var(--hover-color-dark);
-  }
-
-  .loading {
-    color: var(--text-color-dark);
-  }
-
-  .favoritoBtn {
-    background-color: rgba(51, 51, 51, 0.9);
-  }
-
-  .favoritoBtn:hover {
-    background-color: rgba(51, 51, 51, 1);
-  }
-}
-
-@media (max-width: 768px) {
-  .container {
-    padding: 2rem 1rem;
-  }
-
-  .title {
-    font-size: 2.2rem;
-  }
-
-  .concursoGrid {
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap: 1.5rem;
-  }
-}*/
