--- a/Projeto/src/Components/Header/header.module.css
+++ b/Projeto/src/Components/Header/header.module.css
@@ -1,24 +1,3 @@
-:root {
-  /* Cores principais */
-  --primary-dark: #0c2340;    /* Azul marinho escuro */
-  --primary: #183761;         /* Azul marinho médio */
-  --primary-light: #2c5282;   /* Azul marinho claro */
-  
-  /* Cores de destaque */
-  --gold: #c5a572;           /* Dourado suave */
-  --gold-light: #d4b483;     /* Dourado claro */
-  --gold-dark: #b69661;      /* Dourado escuro */
-  
-  /* Cores neutras */
-  --neutral-dark: #1a202c;    /* Quase preto */
-  --neutral: #4a5568;         /* Cinza médio */
-  --neutral-light: #edf2f7;   /* Cinza claro */
-  --white: #ffffff;
-
-  /* Cores de estado */
-  --success: #276749;         /* Verde escuro */
-  --error: #9b2c2c;          /* Vermelho escuro */
-}
 
 * {
     margin: 0;
@@ -51,8 +30,9 @@
     font-weight: bold;
     display: flex;
     align-items: center;
-    gap: 2.5rem;
-    list-style: none;
+    justify-content: end;
+    gap: 1rem;
+    
 }
 
 .listHeader a {
@@ -158,7 +138,7 @@
     width: 100%;
 }
 
-.containerButtonClaroEscuro{
+.containerButton{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -198,7 +178,7 @@
     height: 1.3rem;
     position: absolute;
     bottom: -40px;
-    top: 110%;
+    top: 115%;
     left: 80%;
     transform: translateX(-50%);
     background: rgba(0, 0, 0, 0.5);
@@ -213,127 +193,83 @@
 .buttonLogout:hover::after{
     opacity: 1;
 }
-.menuUsuario{
+.menuUser{
     display: flex;
     gap: 25px;
     padding: 8px;
     color: white;
 }
 
-.menuUsuario li {
+.menuUser li {
     cursor: pointer;
     transition: all 0.3s ease;
     letter-spacing: 0.5px;
     position: relative;
 }
 
-.menuUsuario li:hover {
+.menuUser li:hover {
     transform: translateY(-2px);
 }
-.menuUsuario li:active{
+.menuUser li:active{
     transform: translateY(0);       
 }
-.menuUsuario a {
+.menuUser a {
     color: white;
     font-weight: 600;
     font-size: 1rem;
 }
-
-
-/* Botão do Menu Hambúrguer (só visível em telas pequenas) */
 .menuButton {
     background: none;
     border: none;
     color: var(--neutral-light);
     cursor: pointer;
-    display: none; /* Oculte o botão em telas grandes */
-    z-index: 10; /* Para garantir que fique acima de outros elementos */
+    display: none; 
+    z-index: 10;
+    color: var(--gold);
 }
 
-
-/* Estilo do Menu Lateral */
 .sideMenu {
     position: fixed;
     top: 0;
-    right: -250px; /* Inicialmente fora da tela */
-    width: 180px;
+    right: -250px; 
+    width: 12rem;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5); /* Fundo transparente */
+    background-color: rgba(0, 0, 0, 0.5); 
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
     transition: right 0.3s ease;
     z-index: 5;
-
-    display: flex;               /* Usar flexbox para o layout */
-    flex-direction: column;      /* Organiza os itens verticalmente */
-    justify-content: center;     /* Centraliza verticalmente */
-    align-items: center;         /* Centraliza horizontalmente */
+    display: flex;             
+    flex-direction: column;      
+    justify-content: center;     
+    align-items: center; 
 }
 
-
-/* Estilos para o menu de navegação lateral */
-.sideMenu .nav {
+.nav {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 80px;               /* Remove o espaço no topo */
+    margin-top: 80px;               
     padding: 10px;
     gap: 1rem;
 }
-.sideMenu  {
-    text-decoration: none;
-    color: var(--neutral-light);
-    font-size: 1.2rem;
-    font-weight: 600;
-    white-space: nowrap;
-}
 
-.containerMenuLateral {
+.sideMenuContainer {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    justify-content: start;
+    align-items: start;
     gap: 1rem;
 }
 
-.sobreNoisButton {
-    text-decoration: none;             
-    color: var(--neutral-light);     
-    font-size: 1.1rem;                 
-    padding: 0.5rem 1rem;             
-    transition: all 0.3s ease;         
-    font-weight: 600;                  
-    letter-spacing: 0.3px;            
-    border: none;                      
-    background: transparent;           
-    cursor: pointer;                   
-    position: relative;                
-}
 
-.sobreNoisButton:hover {
-    color: var(--gold-light);              
-}
-
-.sobreNoisButton:hover::after {
-    content: '';                        
-    display: block;                     
-    width: 100%;                        
-    height: 2px;                        
-    background: var(--gold);           
-    position: absolute;                 
-    bottom: -5px;                       
-    left: 0;                            
-    transition: all 0.3s ease;        
-}
-
-.menuLateralUsuario {
+.sideMenuUser {
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
     flex-direction: column;
-    gap: 1rem;    
+    gap: 1rem;  
+    width: 100%;  
 }
 
-.fecharButton {
+.closeButton {
     background-color: red;    
     color: var(--white);   
     padding: 0.6rem;
